--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
 </head>
 <body class="login-body">
   <div class="login-card">
-    <img src="logo-white.jpg" class="login-logo" alt="Scanlist Market">
+    <img src="logo-white.png" class="login-logo" alt="Scanlist Market">
     <input type="email" id="email" placeholder="Email">
     <input type="password" id="pass" placeholder="Senha">
     <button id="btnLogin">Entrar</button>
