--- a/history.html
+++ b/history.html
@@ -12,7 +12,7 @@
     .container { padding: 20px; max-width: 500px; margin: 0 auto; }
     .card { background: white; padding: 20px; border-radius: 16px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); margin-bottom: 20px; }
     .history-item { display: flex; justify-content: space-between; padding: 12px; border-bottom: 1px solid #eee; }
-    .btn-red { background: var(--primary); color: white; border: none; padding: 15px; border-radius: 10px; width: 100%; font-weight: bold; cursor: pointer; }
+    .btn-red { background: var(--primary); color: white; border: none; padding: 15px; border-radius: 10px; width: 100%; font-weight: bold; cursor: pointer; margin-top: 10px; }
   </style>
 </head>
 <body>
@@ -24,15 +24,15 @@
   <main class="container">
     <div class="card">
       <h3 style="text-align:center;">Resumo de Gastos</h3>
-      <canvas id="myChart"></canvas>
+      <div style="position: relative; height: 250px;"><canvas id="myChart"></canvas></div>
     </div>
 
     <div class="card">
       <h3 style="color:var(--primary)">Últimas Compras</h3>
-      <div id="listaHistorico">Carregando...</div>
+      <div id="listaHistorico">Buscando dados...</div>
     </div>
     
-    <button class="btn-red" onclick="location.href='app.html'">NOVA COMPRA</button>
+    <button class="btn-red" onclick="location.href='app.html'">VOLTAR AO SCANNER</button>
   </main>
 
   <script type="module">
@@ -40,7 +40,6 @@
     import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-auth.js";
     import { getDatabase, ref, get } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-database.js";
 
-    // --- CONFIGURAÇÃO REAL DO TEU PROJETO ---
     const firebaseConfig = {
       apiKey: "AIzaSyCtke_2T3e0HDDMqJsfJsRGs5KcKtN3Xe8",
       authDomain: "scanlistmarket-30143.firebaseapp.com",
@@ -58,28 +57,40 @@
     onAuthStateChanged(auth, async (user) => {
       if (user) {
         const snap = await get(ref(db, `history/${user.uid}`));
+        const lista = document.getElementById("listaHistorico");
         if (snap.exists()) {
           const dados = snap.val();
-          const lista = document.getElementById("listaHistorico");
           lista.innerHTML = "";
-          let total = 0;
-          Object.values(dados).forEach(c => {
-            total += c.total;
-            lista.innerHTML += `<div class="history-item"><span>${new Date(c.data).toLocaleDateString()}</span><span style="color:var(--primary); font-weight:bold;">R$ ${c.total.toFixed(2)}</span></div>`;
+          let somaTotal = 0;
+          Object.values(dados).reverse().forEach(c => {
+            somaTotal += c.total;
+            lista.innerHTML += `<div class="history-item">
+                <span>${new Date(c.data).toLocaleDateString()}</span>
+                <span style="color:var(--primary); font-weight:bold;">R$ ${c.total.toFixed(2)}</span>
+            </div>`;
           });
-          gerarGrafico(total);
-        } else { document.getElementById("listaHistorico").innerText = "Sem histórico."; }
+          gerarGrafico(somaTotal);
+        } else { lista.innerText = "Nenhuma compra finalizada."; gerarGrafico(0); }
       } else { location.href = 'login.html'; }
     });
 
     function gerarGrafico(total) {
-      new Chart(document.getElementById('myChart'), {
+      const ctx = document.getElementById('myChart');
+      new Chart(ctx, {
         type: 'doughnut',
         data: {
-          labels: ['Total Gasto'],
-          datasets: [{ data: [total, 0], backgroundColor: ['#d40000', '#eee'], borderWidth: 0 }]
+          labels: ['Total Acumulado'],
+          datasets: [{
+            data: [total || 1, 0.001], // Ajuste para o gráfico não sumir se for zero
+            backgroundColor: ['#d40000', '#eee'],
+            borderWidth: 0
+          }]
         },
-        options: { cutout: '75%' }
+        options: {
+          maintainAspectRatio: false,
+          cutout: '80%',
+          plugins: { legend: { display: false } }
+        }
       });
     }
   </script>
