--- a/app.html
+++ b/app.html
@@ -21,10 +21,8 @@
     #reader { width: 100%; border-radius: 16px; overflow: hidden; background: #000; box-shadow: var(--shadow); border: 2px solid var(--primary); }
     .torch-btn { position: absolute; bottom: 15px; right: 15px; width: 45px; height: 45px; background: rgba(255, 255, 255, 0.9); border-radius: 50%; border: none; font-size: 20px; display: flex; align-items: center; justify-content: center; z-index: 110; box-shadow: 0 4px 10px rgba(0,0,0,0.3); cursor: pointer; }
     .product-card { background: white; padding: 25px; border-radius: 16px; display: none; box-shadow: 0 10px 25px rgba(0,0,0,0.15); margin-top: 20px; }
-    .product-img-container { width: 120px; height: 120px; margin: 0 auto 15px; display: flex; align-items: center; justify-content: center; background: #fff; border-radius: 12px; border: 1px solid #eee; }
-    .product-img { max-width: 100%; max-height: 100%; object-fit: contain; }
     .qty-box { display: flex; align-items: center; justify-content: center; gap: 20px; margin: 20px 0; background: #f0f0f0; padding: 10px; border-radius: 50px; }
-    .qty-btn { background: white; border: none; width: 45px; height: 45px; border-radius: 50%; font-size: 24px; font-weight: bold; box-shadow: 0 2px 5px rgba(0,0,0,0.1); cursor: pointer; }
+    .qty-btn { background: white; border: none; width: 45px; height: 45px; border-radius: 50%; font-size: 24px; font-weight: bold; cursor: pointer; }
     input { width: 100%; padding: 14px; border: 2px solid #eee; border-radius: 10px; box-sizing: border-box; font-size: 16px; text-align: center; margin-bottom: 10px; }
     .btn { background: var(--primary); color: white; border: none; padding: 16px; border-radius: 10px; cursor: pointer; font-weight: bold; width: 100%; font-size: 16px; transition: all 0.2s; }
     .cart-container { position: relative; cursor: pointer; font-size: 30px; }
@@ -34,42 +32,52 @@
     .tour-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.7); z-index: 2000; display: none; align-items: flex-end; justify-content: center; padding-bottom: 50px; }
     .tour-card { background: white; color: #333; padding: 20px; border-radius: 20px; max-width: 320px; width: 90%; text-align: center; box-shadow: 0 -5px 20px rgba(0,0,0,0.3); }
     .tour-highlight { z-index: 2001 !important; position: relative; box-shadow: 0 0 0 9999px rgba(0,0,0,0.7), 0 0 15px 5px white !important; pointer-events: none; border-radius: 10px; }
-    .loading-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(255,255,255,0.9); display: none; flex-direction: column; align-items: center; justify-content: center; z-index: 1000; }
-    .spinner { width: 40px; height: 40px; border: 4px solid #f3f3f3; border-top: 4px solid var(--primary); border-radius: 50%; animation: spin 1s linear infinite; }
-    @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
   </style>
 </head>
 <body>
   <div id="tourOverlay" class="tour-overlay"><div class="tour-card" id="tourCard"><h3 id="tourTitle" style="color:var(--primary); margin:0 0 10px 0;"></h3><p id="tourDesc" style="margin:0 0 15px 0; font-size:14px;"></p><button class="btn" id="btnTourNext" style="padding:10px;">PRÓXIMO</button></div></div>
-  <div id="loading" class="loading-overlay"><div class="spinner"></div><p>Buscando produto...</p></div>
+  
   <header class="header">
-    <div class="header-info"><img src="logo-white.png" class="header-logo" alt="Logo"><div><small style="font-size: 10px;">BEM-VINDO,</small><br><span id="userNameDisplay" style="font-weight: bold;">...</span></div></div>
+    <div class="header-info">
+        <img src="logo-white.png" class="header-logo" alt="Logo">
+        <div><small style="font-size: 10px;">BEM-VINDO,</small><br><span id="userNameDisplay" style="font-weight: bold;">...</span></div>
+    </div>
     <div style="display: flex; gap: 15px; align-items: center;">
       <button id="step-history" onclick="location.href='history.html'" style="background:none; border:none; font-size:24px; cursor:pointer;">📊</button>
       <div class="cart-container" id="btnVerCarrinho">🛒<span class="cart-badge" id="cartCount">0</span></div>
+      <button id="btnSettings" style="background:none; border:none; font-size:24px; cursor:pointer;">⚙️</button>
       <button onclick="confirm('Sair da conta?') && location.replace('login.html')" style="background:none; border:none; font-size:22px; cursor:pointer;">🚪</button>
     </div>
   </header>
+
   <main class="container">
     <div class="scanner-wrapper" id="scannerWrapper"><div id="reader"></div><button class="torch-btn" id="btnTorch">🔦</button></div>
     <button class="btn" id="btnIniciarScan">📷 ESCANEAR PRODUTO</button>
+    
     <div id="step-manual" style="margin-top:20px; background:white; padding:20px; border-radius:16px; border:1px solid #ddd;">
         <input type="text" id="inputManualCode" placeholder="OU DIGITE O CÓDIGO" inputmode="numeric">
         <button class="btn" id="btnBuscaManual">BUSCAR MANUALMENTE</button>
     </div>
+
     <div id="productCard" class="product-card">
-      <div class="product-img-container"><img id="pImg" src="" class="product-img"></div>
+      <img id="pImg" src="" style="max-height: 100px; margin-bottom: 10px;">
       <input type="text" id="pNomeInput" placeholder="Nome do Produto">
-      <input type="number" id="pPreco" placeholder="Preço R$" step="0.01" inputmode="decimal">
-      <div class="qty-box"><button class="qty-btn" id="btnMinus">−</button><span id="pQtdDisplay">1</span><button class="qty-btn" id="btnPlus">+</button></div>
+      <input type="number" id="pPreco" placeholder="Preço R$" step="0.01">
+      <div class="qty-box">
+        <button class="qty-btn" id="btnMinus">-</button>
+        <span id="pQtdDisplay" style="font-weight:bold; font-size:20px;">1</span>
+        <button class="qty-btn" id="btnPlus">+</button>
+      </div>
       <button class="btn" id="btnConfirmar" style="background:var(--success)">ADICIONAR AO CARRINHO</button>
       <button class="btn" style="background:#666; margin-top:10px;" onclick="document.getElementById('productCard').style.display='none'">CANCELAR</button>
     </div>
+
     <div id="step-total" style="background:white; padding:15px; border-radius:16px; margin-top:20px; border-top:5px solid var(--primary); box-shadow: var(--shadow);">
       <small style="font-weight: bold; color: #666;">TOTAL NO CARRINHO</small>
       <div style="font-size: 32px; font-weight: 800; color: var(--primary);">R$ <span id="totalGeral">0.00</span></div>
     </div>
   </main>
+
   <div id="modalCarrinho" class="cart-modal">
     <div style="display:flex; justify-content: space-between; align-items: center; border-bottom: 2px solid var(--primary); padding-bottom: 10px;">
       <h2 style="margin:0; color:var(--primary)">Meu Carrinho</h2>
@@ -77,10 +85,11 @@
     </div>
     <div id="listaItensCarrinho" style="margin-top:20px;"></div>
     <div style="margin-top:40px; border-top:1px solid #eee; padding-top:20px;">
-      <button class="btn" id="btnFinalizarCompra">FINALIZAR COMPRA</button>
+      <button class="btn" id="btnFinalizarDefinitivo">FINALIZAR COMPRA</button>
       <button class="btn" style="background:#666; margin-top:10px;" onclick="document.getElementById('modalCarrinho').style.display='none'">VOLTAR</button>
     </div>
   </div>
+
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js";
     import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-auth.js";
@@ -100,24 +109,7 @@
     const auth = getAuth(app);
     const db = getDatabase(app);
     let userUID = null; let currentQty = 1; let lastCode = ""; let torchOn = false;
-    let scannerIniciado = false;
     const html5QrCode = new Html5Qrcode("reader");
-
-    const tourSteps = [
-      { element: "btnIniciarScan", title: "Câmera Inteligente", desc: "Clique aqui para escanear o código de barras." },
-      { element: "step-manual", title: "Busca Manual", desc: "Digite o código se o scanner falhar." },
-      { element: "step-total", title: "Gasto Atual", desc: "Aqui você controla o seu orçamento." },
-      { element: "step-history", title: "Histórico", desc: "Veja seus gastos antigos aqui." },
-      { element: null, title: "Pronto!", desc: "Instale o app para ativar todas as funções." }
-    ];
-    let currentStep = 0;
-    function showStep() {
-      const step = tourSteps[currentStep];
-      document.querySelectorAll('.tour-highlight').forEach(el => el.classList.remove('tour-highlight'));
-      if (step.element) document.getElementById(step.element).classList.add("tour-highlight");
-      document.getElementById("tourTitle").innerText = step.title;
-      document.getElementById("tourDesc").innerText = step.desc;
-    }
 
     onAuthStateChanged(auth, (user) => {
       if (user) {
@@ -130,51 +122,33 @@
           }
         });
         onValue(ref(db, `users/${userUID}/items`), (snap) => {
-          const count = snap.size || 0;
-          document.getElementById("cartCount").innerText = count;
-          document.getElementById("cartCount").style.display = count > 0 ? "flex" : "none";
+          document.getElementById("cartCount").innerText = snap.size || 0;
         });
       } else { window.location.href = "login.html"; }
     });
 
-    document.getElementById("btnTourNext").onclick = () => {
-      currentStep++;
-      if(currentStep < tourSteps.length) showStep();
-      else { document.getElementById("tourOverlay").style.display = "none"; document.querySelectorAll('.tour-highlight').forEach(el => el.classList.remove('tour-highlight')); localStorage.setItem("tourVisto", "true"); }
-    };
+    // Lógica de Quantidade + e -
+    document.getElementById("btnPlus").onclick = () => { currentQty++; document.getElementById("pQtdDisplay").innerText = currentQty; };
+    document.getElementById("btnMinus").onclick = () => { if(currentQty > 1) { currentQty--; document.getElementById("pQtdDisplay").innerText = currentQty; } };
 
     document.getElementById("btnIniciarScan").onclick = () => {
       document.getElementById("scannerWrapper").style.display = "block";
-      scannerIniciado = true;
-      html5QrCode.start({ facingMode: "environment" }, { fps: 20, qrbox: 250 }, (codigo) => {
-        html5QrCode.stop().then(() => { 
-          document.getElementById("scannerWrapper").style.display = "none"; 
-          scannerIniciado = false;
-          buscarAPI(codigo); 
-        });
-      }).catch(() => { scannerIniciado = false; });
+      html5QrCode.start({ facingMode: "environment" }, { fps: 15, qrbox: 250 }, (codigo) => {
+        html5QrCode.stop().then(() => { document.getElementById("scannerWrapper").style.display = "none"; buscarAPI(codigo); });
+      });
     };
 
     document.getElementById("btnTorch").onclick = async () => {
-      if(!scannerIniciado) return alert("Abra a câmera primeiro!");
       try {
         torchOn = !torchOn;
         const track = html5QrCode.getRunningTrack();
-        if(track) {
-          await track.applyConstraints({ advanced: [{ torch: torchOn }] });
-          document.getElementById("btnTorch").innerText = torchOn ? "🚫🔦" : "🔦";
-        }
-      } catch (e) { alert("Sua câmera não suporta lanterna via navegador."); }
-    };
-
-    document.getElementById("btnBuscaManual").onclick = () => {
-      const c = document.getElementById("inputManualCode").value.trim();
-      if(c) buscarAPI(c);
+        if(track) await track.applyConstraints({ advanced: [{ torch: torchOn }] });
+      } catch (e) { alert("Inicie a câmera antes de ligar a luz."); }
     };
 
     async function buscarAPI(codigo) {
-      lastCode = codigo; document.getElementById("loading").style.display = "flex";
-      document.getElementById("productCard").style.display = "none";
+      lastCode = codigo; currentQty = 1; document.getElementById("pQtdDisplay").innerText = "1";
+      document.getElementById("productCard").style.display = "block";
       const local = await get(ref(db, `products/${codigo}`));
       if(local.exists()){
         document.getElementById("pNomeInput").value = local.val().nome;
@@ -185,60 +159,69 @@
         document.getElementById("pNomeInput").value = data.status === 1 ? data.product.product_name : "";
         document.getElementById("pImg").src = data.status === 1 ? data.product.image_url : "";
       }
-      document.getElementById("loading").style.display = "none";
-      document.getElementById("productCard").style.display = "block";
     }
 
     document.getElementById("btnConfirmar").onclick = async () => {
       const nome = document.getElementById("pNomeInput").value;
       const preco = parseFloat(document.getElementById("pPreco").value);
-      if(!nome || !preco) return alert("Preencha os campos!");
+      if(!nome || isNaN(preco)) return alert("Dados inválidos!");
       const sub = preco * currentQty;
       await set(ref(db, `products/${lastCode}`), { nome, imagem: document.getElementById("pImg").src });
       const snap = await get(ref(db, 'users/' + userUID));
       await push(ref(db, `users/${userUID}/items`), { nome, preco, qtd: currentQty, subtotal: sub });
       await update(ref(db, 'users/' + userUID), { totalCart: (snap.val().totalCart || 0) + sub });
       document.getElementById("productCard").style.display = "none";
-      document.getElementById("pPreco").value = ""; currentQty = 1; document.getElementById("pQtdDisplay").innerText = "1";
     };
 
     document.getElementById("btnVerCarrinho").onclick = carregarCarrinho;
-    
     async function carregarCarrinho() {
-      const modal = document.getElementById("modalCarrinho");
+      document.getElementById("modalCarrinho").style.display = "block";
       const lista = document.getElementById("listaItensCarrinho");
-      modal.style.display = "block";
       const snap = await get(ref(db, `users/${userUID}/items`));
-      lista.innerHTML = snap.exists() ? "" : "<p style='text-align:center;'>Vazio</p>";
+      lista.innerHTML = snap.exists() ? "" : "Vazio";
       snap.forEach(item => {
         lista.innerHTML += `<div class="cart-item">
-          <div><strong>${item.val().nome}</strong><br><small>${item.val().qtd}x R$ ${item.val().preco.toFixed(2)}</small></div>
-          <div style="display:flex; align-items:center; gap:10px;">R$ ${item.val().subtotal.toFixed(2)} 
-          <button onclick="removerItem('${item.key}', ${item.val().subtotal})" style="border:none; background:none; cursor:pointer;">🗑️</button></div>
+          <div><strong>${item.val().nome}</strong> (${item.val().qtd}x)</div>
+          <div>R$ ${item.val().subtotal.toFixed(2)} <button onclick="window.removerItem('${item.key}', ${item.val().subtotal})">🗑️</button></div>
         </div>`;
       });
     }
 
-    window.removerItem = async (key, subtotal) => {
+    window.removerItem = async (key, val) => {
       const snap = await get(ref(db, 'users/' + userUID));
       await remove(ref(db, `users/${userUID}/items/${key}`));
-      await update(ref(db, 'users/' + userUID), { totalCart: (snap.val().totalCart || 0) - subtotal });
+      await update(ref(db, 'users/' + userUID), { totalCart: snap.val().totalCart - val });
       carregarCarrinho();
     };
 
-    document.getElementById("btnFinalizarCompra").onclick = async () => {
-      const totalStr = document.getElementById("totalGeral").innerText;
-      const totalNum = parseFloat(totalStr);
-      if(totalNum <= 0) return alert("Carrinho vazio!");
+    document.getElementById("btnFinalizarDefinitivo").onclick = async () => {
+      const tVal = parseFloat(document.getElementById("totalGeral").innerText);
+      if(tVal <= 0) return alert("Carrinho vazio!");
       if(confirm("Finalizar e salvar no histórico?")) {
-        try {
-          await push(ref(db, `history/${userUID}`), { data: Date.now(), total: totalNum });
-          await remove(ref(db, `users/${userUID}/items`));
-          await update(ref(db, 'users/' + userUID), { totalCart: 0 });
-          alert("Compra salva com sucesso!");
-          location.href = 'history.html';
-        } catch(e) { alert("Erro ao salvar. Tente novamente."); }
+        await push(ref(db, `history/${userUID}`), { data: Date.now(), total: tVal });
+        await remove(ref(db, `users/${userUID}/items`));
+        await update(ref(db, 'users/' + userUID), { totalCart: 0 });
+        location.href = "history.html";
       }
+    };
+
+    // TOUR DINÂMICO
+    const tourSteps = [
+      { element: "btnIniciarScan", title: "Câmera", desc: "Escaneie o código de barras." },
+      { element: "step-total", title: "Gasto", desc: "Acompanhe seu total aqui." },
+      { element: "btnSettings", title: "Configurações", desc: "Ajuste seu perfil aqui." }
+    ];
+    let currentStep = 0;
+    function showStep() {
+      const step = tourSteps[currentStep];
+      document.querySelectorAll('.tour-highlight').forEach(el => el.classList.remove('tour-highlight'));
+      if (step.element) document.getElementById(step.element).classList.add("tour-highlight");
+      document.getElementById("tourTitle").innerText = step.title;
+      document.getElementById("tourDesc").innerText = step.desc;
+    }
+    document.getElementById("btnTourNext").onclick = () => {
+      currentStep++; if(currentStep < tourSteps.length) showStep();
+      else { document.getElementById("tourOverlay").style.display = "none"; localStorage.setItem("tourVisto", "true"); }
     };
   </script>
 </body>
