--- a/settings.html
+++ b/settings.html
@@ -3,35 +3,61 @@
 <head>
   <meta charset="UTF-8">
   <title>Scanlist Market - Configurações</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#d40000">
   <style>
-    body { font-family: sans-serif; margin: 0; background: #f4f4f4; }
-    .header { background: #d40000; color: white; padding: 15px; display: flex; align-items: center; }
+    :root { --primary: #d40000; --gray-light: #f8f9fa; }
+    body { font-family: -apple-system, sans-serif; background: var(--gray-light); margin: 0; padding-bottom: 30px; }
+    .header { background: var(--primary); color: white; padding: 15px; display: flex; align-items: center; }
     .container { padding: 20px; max-width: 500px; margin: 0 auto; }
-    .card { background: white; padding: 20px; border-radius: 8px; margin-bottom: 20px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-    .btn { width: 100%; padding: 12px; border: none; border-radius: 4px; cursor: pointer; font-weight: bold; margin-top: 10px; }
-    .btn-save { background: #28a745; color: white; }
-    .btn-logout { background: #d40000; color: white; margin-top: 30px; }
+    .card { background: white; padding: 20px; border-radius: 16px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); margin-bottom: 20px; }
+    .setting-item { display: flex; justify-content: space-between; align-items: center; padding: 15px 0; border-bottom: 1px solid #eee; }
+    .setting-item:last-child { border-bottom: none; }
+    input { width: 100%; padding: 12px; border: 1px solid #ddd; border-radius: 8px; margin-top: 10px; box-sizing: border-box; }
+    .btn { background: var(--primary); color: white; border: none; padding: 15px; border-radius: 10px; width: 100%; font-weight: bold; cursor: pointer; margin-top: 10px; }
+    .btn-outline { background: white; color: var(--primary); border: 2px solid var(--primary); padding: 12px; border-radius: 10px; width: 100%; font-weight: bold; cursor: pointer; margin-top: 10px; }
   </style>
 </head>
 <body>
   <header class="header">
-    <button onclick="location.href='app.html'" style="background:none; border:none; color:white; font-size:20px; cursor:pointer; margin-right:15px;">←</button>
-    <span>Configurações</span>
+    <button onclick="location.href='app.html'" style="background:none; border:none; color:white; font-size:24px; cursor:pointer;">←</button>
+    <span style="margin-left: 15px; font-weight: bold;">Configurações</span>
   </header>
+
   <main class="container">
     <div class="card">
-        <h3>Meus Dados</h3>
-        <input type="text" id="userNameInput" style="width:100%; padding:10px; margin-bottom:10px;">
-        <button class="btn btn-save" id="btnUpdate">Salvar Nome</button>
+      <h3 style="color:var(--primary); margin-top:0;">Meu Perfil</h3>
+      <label style="font-size:14px; color:#666;">Seu Nome:</label>
+      <input type="text" id="editUsername" placeholder="Nome de usuário">
+      <button class="btn" id="btnSalvarPerfil">SALVAR ALTERAÇÕES</button>
     </div>
-    <button class="btn btn-logout" id="btnSairConfig">Sair da Conta</button>
+
+    <div class="card">
+      <h3 style="color:var(--primary); margin-top:0;">Aplicativo</h3>
+      <div class="setting-item">
+        <span>Ver tutorial novamente</span>
+        <button class="btn-outline" style="width:auto; padding:5px 15px;" id="btnResetTour">REINICIAR</button>
+      </div>
+      <div class="setting-item">
+        <span>Versão do App</span>
+        <span style="color:#999;">1.0.2</span>
+      </div>
+    </div>
+
+    <div class="card" style="text-align:center;">
+      <h3 style="color:var(--primary); margin-top:0;">Suporte</h3>
+      <p style="font-size:14px; color:#666;">Dúvidas ou problemas? Fale conosco.</p>
+      <button class="btn" style="background:#25D366;" onclick="window.open('https://wa.me/SEU_NUMERO_AQUI')">SUPORTE WHATSAPP</button>
+    </div>
+
+    <button class="btn-outline" onclick="confirm('Deseja sair?') && location.replace('login.html')">SAIR DA CONTA</button>
   </main>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js";
-    import { getAuth, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-auth.js";
-    import { getDatabase, ref, update, get } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-database.js";
+    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-auth.js";
+    import { getDatabase, ref, get, update } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-database.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyCtke_2T3e0HDDMqJsfJsRGs5KcKtN3Xe8",
@@ -46,17 +72,28 @@
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
     const db = getDatabase(app);
+    let userUID = null;
 
-    onAuthStateChanged(auth, (user) => {
-        if (user) {
-            get(ref(db, 'users/' + user.uid)).then(snap => {
-                document.getElementById("userNameInput").value = snap.val().username;
-            });
+    onAuthStateChanged(auth, async (user) => {
+      if (user) {
+        userUID = user.uid;
+        const snap = await get(ref(db, 'users/' + userUID));
+        if (snap.exists()) {
+          document.getElementById("editUsername").value = snap.val().username || "";
         }
+      } else { location.href = 'login.html'; }
     });
 
-    document.getElementById("btnSairConfig").onclick = () => {
-        signOut(auth).then(() => window.location.href = "login.html");
+    document.getElementById("btnSalvarPerfil").onclick = async () => {
+      const novoNome = document.getElementById("editUsername").value.trim();
+      if (!novoNome) return alert("Digite um nome!");
+      await update(ref(db, 'users/' + userUID), { username: novoNome });
+      alert("Perfil atualizado com sucesso!");
+    };
+
+    document.getElementById("btnResetTour").onclick = () => {
+      localStorage.removeItem("tourVisto");
+      alert("O tutorial aparecerá na próxima vez que você abrir o App!");
     };
   </script>
 </body>
