--- a/login.html
+++ b/login.html
@@ -2,60 +2,103 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Scanlist Market - Entrar</title>
+  <title>Scanlist Market - Login</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#d40000">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <link rel="apple-touch-icon" href="logo-white.png">
   <style>
-    :root { --primary: #d40000; }
-    body { font-family: -apple-system, system-ui, sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; background-color: var(--primary); margin: 0; }
-    .login-card { background: white; padding: 35px; border-radius: 20px; width: 90%; max-width: 380px; text-align: center; box-shadow: 0 10px 25px rgba(0,0,0,0.2); }
-    .login-logo { width: 200px; margin-bottom: 25px; }
-    input { width: 100%; padding: 14px; margin: 10px 0; border: 2px solid #eee; border-radius: 10px; box-sizing: border-box; font-size: 16px; text-align: center; }
-    input:focus { border-color: var(--primary); outline: none; }
-    .btn-login { width: 100%; padding: 16px; background-color: var(--primary); color: white; border: none; border-radius: 10px; cursor: pointer; font-weight: bold; font-size: 16px; margin-top: 10px; }
-    .switch { margin-top: 25px; font-size: 14px; color: #666; }
-    a { color: var(--primary); text-decoration: none; font-weight: bold; }
+    :root { --primary: #d40000; --gray-light: #f8f9fa; --font-size: 16px; }
+    
+    /* ESTILO DA SPLASH SCREEN */
+    #splash-screen {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: #ffffff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+      transition: opacity 0.5s ease;
+    }
+    .splash-logo {
+      width: 150px;
+      animation: pulse 1.5s infinite;
+    }
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.05); }
+      100% { transform: scale(1); }
+    }
+
+    body { font-family: -apple-system, sans-serif; background: var(--gray-light); margin: 0; display: flex; align-items: center; justify-content: center; height: 100vh; font-size: var(--font-size); }
+    .login-card { background: white; padding: 30px; border-radius: 20px; box-shadow: 0 10px 25px rgba(0,0,0,0.1); width: 90%; max-width: 400px; text-align: center; }
+    .logo { height: 60px; margin-bottom: 20px; }
+    input { width: 100%; padding: 15px; border: 2px solid #eee; border-radius: 12px; margin-bottom: 15px; box-sizing: border-box; font-size: 1em; }
+    .btn { background: var(--primary); color: white; border: none; padding: 18px; border-radius: 12px; width: 100%; font-weight: bold; cursor: pointer; font-size: 1em; }
+    .link { color: var(--primary); text-decoration: none; display: block; margin-top: 20px; font-weight: bold; font-size: 0.9em; }
   </style>
 </head>
 <body>
+
+  <div id="splash-screen">
+    <img src="logo.png" class="splash-logo">
+    <div style="margin-top: 20px; color: #d40000; font-weight: bold; font-family: sans-serif;">Scanlist Market</div>
+  </div>
+
   <div class="login-card">
-    <img src="logo-white.png" class="login-logo" alt="Scanlist Market">
-    <input type="email" id="email" placeholder="Seu e-mail">
-    <input type="password" id="pass" placeholder="Sua senha">
-    <button class="btn-login" id="btnLogin">ENTRAR NO APP</button>
-    <div class="switch">Ainda não tem conta? <br><br> <a href="index.html">CRIAR MEU ACESSO</a></div>
+    <img src="logo.png" class="logo" alt="Logo">
+    <h2 id="txt-login-title" style="color:var(--primary); margin-top:0;">Entrar</h2>
+    <input type="email" id="email" placeholder="E-mail">
+    <input type="password" id="password" placeholder="Senha">
+    <button class="btn" id="btnLogin">ENTRAR</button>
+    <a href="signup.html" class="link" id="txt-signup-link">Criar uma conta gratuita</a>
   </div>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js";
     import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-auth.js";
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyCtke_2T3e0HDDMqJsfJsRGs5KcKtN3Xe8",
-      authDomain: "scanlistmarket-30143.firebaseapp.com",
-      databaseURL: "https://scanlistmarket-30143-default-rtdb.firebaseio.com",
-      projectId: "scanlistmarket-30143",
-      storageBucket: "scanlistmarket-30143.appspot.com",
-      messagingSenderId: "428406265714",
-      appId: "1:428406265714:web:0a9d92dc1229458a3d6feb"
-    };
-
+    const firebaseConfig = { apiKey: "AIzaSyCtke_2T3e0HDDMqJsfJsRGs5KcKtN3Xe8", authDomain: "scanlistmarket-30143.firebaseapp.com", databaseURL: "https://scanlistmarket-30143-default-rtdb.firebaseio.com", projectId: "scanlistmarket-30143", storageBucket: "scanlistmarket-30143.appspot.com", messagingSenderId: "428406265714", appId: "1:428406265714:web:0a9d92dc1229458a3d6feb" };
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
 
-    document.getElementById("btnLogin").onclick = async function() {
-      const email = document.getElementById("email").value.trim();
-      const pass = document.getElementById("pass").value;
-      if (!email || !pass) return alert("Preencha todos os campos!");
+    // Esconder Splash após carregar
+    window.addEventListener('load', () => {
+      setTimeout(() => {
+        const splash = document.getElementById('splash-screen');
+        splash.style.opacity = '0';
+        setTimeout(() => splash.style.display = 'none', 500);
+      }, 2000); // 2 segundos de exibição
+    });
+
+    const dict = {
+      pt: { title: "Entrar", email: "E-mail", pass: "Senha", btn: "ENTRAR", link: "Criar uma conta gratuita", error: "Erro ao entrar." },
+      en: { title: "Login", email: "Email Address", pass: "Password", btn: "LOGIN", link: "Create a free account", error: "Login failed." },
+      es: { title: "Iniciar Sesión", email: "Correo electrónico", pass: "Contraseña", btn: "ENTRAR", link: "Crear una cuenta gratuita", error: "Error al entrar." }
+    };
+
+    function aplicarPreferencias() {
+      const lang = localStorage.getItem("appLang") || "pt";
+      const font = localStorage.getItem("appFontSize") || "16px";
+      document.documentElement.style.setProperty('--font-size', font);
+      document.getElementById("txt-login-title").innerText = dict[lang].title;
+      document.getElementById("email").placeholder = dict[lang].email;
+      document.getElementById("password").placeholder = dict[lang].pass;
+      document.getElementById("btnLogin").innerText = dict[lang].btn;
+      document.getElementById("txt-signup-link").innerText = dict[lang].link;
+    }
+
+    document.getElementById("btnLogin").onclick = async () => {
+      const email = document.getElementById("email").value;
+      const pass = document.getElementById("password").value;
+      const lang = localStorage.getItem("appLang") || "pt";
       try {
         await signInWithEmailAndPassword(auth, email, pass);
-        window.location.href = "app.html";
-      } catch (error) { alert("Erro: E-mail ou senha incorretos."); }
+        location.href = "app.html";
+      } catch (e) { alert(dict[lang].error); }
     };
+
+    window.onload = aplicarPreferencias;
   </script>
 </body>
 </html>
