--- a/login.html
+++ b/login.html
@@ -7,7 +7,6 @@
   <style>
     :root { --primary: #d40000; --gray-light: #f8f9fa; --font-size: 16px; }
     
-    /* ESTILO DA SPLASH SCREEN */
     #splash-screen {
       position: fixed;
       top: 0; left: 0;
@@ -21,7 +20,8 @@
       transition: opacity 0.5s ease;
     }
     .splash-logo {
-      width: 150px;
+      width: 200px; /* Ajustado para sua logo */
+      height: auto;
       animation: pulse 1.5s infinite;
     }
     @keyframes pulse {
@@ -32,7 +32,7 @@
 
     body { font-family: -apple-system, sans-serif; background: var(--gray-light); margin: 0; display: flex; align-items: center; justify-content: center; height: 100vh; font-size: var(--font-size); }
     .login-card { background: white; padding: 30px; border-radius: 20px; box-shadow: 0 10px 25px rgba(0,0,0,0.1); width: 90%; max-width: 400px; text-align: center; }
-    .logo { height: 60px; margin-bottom: 20px; }
+    .logo-login { height: 80px; margin-bottom: 20px; object-fit: contain; }
     input { width: 100%; padding: 15px; border: 2px solid #eee; border-radius: 12px; margin-bottom: 15px; box-sizing: border-box; font-size: 1em; }
     .btn { background: var(--primary); color: white; border: none; padding: 18px; border-radius: 12px; width: 100%; font-weight: bold; cursor: pointer; font-size: 1em; }
     .link { color: var(--primary); text-decoration: none; display: block; margin-top: 20px; font-weight: bold; font-size: 0.9em; }
@@ -41,12 +41,12 @@
 <body>
 
   <div id="splash-screen">
-    <img src="logo.png" class="splash-logo">
-    <div style="margin-top: 20px; color: #d40000; font-weight: bold; font-family: sans-serif;">Scanlist Market</div>
+    <img src="logo-white.png" class="splash-logo" alt="Scanlist Market">
+    <div style="margin-top: 25px; color: #d40000; font-size: 1.2em; font-weight: 900;">Scanlist Market</div>
   </div>
 
   <div class="login-card">
-    <img src="logo.png" class="logo" alt="Logo">
+    <img src="logo-white.png" class="logo-login" alt="Logo">
     <h2 id="txt-login-title" style="color:var(--primary); margin-top:0;">Entrar</h2>
     <input type="email" id="email" placeholder="E-mail">
     <input type="password" id="password" placeholder="Senha">
@@ -62,13 +62,14 @@
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
 
-    // Esconder Splash após carregar
     window.addEventListener('load', () => {
       setTimeout(() => {
         const splash = document.getElementById('splash-screen');
-        splash.style.opacity = '0';
-        setTimeout(() => splash.style.display = 'none', 500);
-      }, 2000); // 2 segundos de exibição
+        if(splash) {
+          splash.style.opacity = '0';
+          setTimeout(() => splash.style.display = 'none', 500);
+        }
+      }, 2500);
     });
 
     const dict = {
