--- a/login.html
+++ b/login.html
@@ -5,8 +5,9 @@
   <title>Scanlist Market - Login</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <style>
-    :root { --primary: #d40000; --gray-light: #f8f9fa; --font-size: 16px; }
+    :root { --primary: #ffffff; --accent: #d40000; --font-size: 16px; }
     
+    /* APENAS A SPLASH É BRANCA */
     #splash-screen {
       position: fixed;
       top: 0; left: 0;
@@ -20,7 +21,7 @@
       transition: opacity 0.5s ease;
     }
     .splash-logo {
-      width: 200px; /* Ajustado para sua logo */
+      width: 200px;
       height: auto;
       animation: pulse 1.5s infinite;
     }
@@ -30,12 +31,38 @@
       100% { transform: scale(1); }
     }
 
-    body { font-family: -apple-system, sans-serif; background: var(--gray-light); margin: 0; display: flex; align-items: center; justify-content: center; height: 100vh; font-size: var(--font-size); }
-    .login-card { background: white; padding: 30px; border-radius: 20px; box-shadow: 0 10px 25px rgba(0,0,0,0.1); width: 90%; max-width: 400px; text-align: center; }
+    /* O RESTANTE VOLTOU A SER VERMELHO */
+    body { 
+      font-family: -apple-system, sans-serif; 
+      background: #d40000; /* Fundo vermelho original */
+      margin: 0; 
+      display: flex; 
+      align-items: center; 
+      justify-content: center; 
+      height: 100vh; 
+      font-size: var(--font-size); 
+    }
+    .login-card { 
+      background: rgba(255,255,255,0.1); 
+      padding: 30px; 
+      border-radius: 20px; 
+      backdrop-filter: blur(10px);
+      border: 1px solid rgba(255,255,255,0.2);
+      width: 90%; 
+      max-width: 400px; 
+      text-align: center; 
+    }
     .logo-login { height: 80px; margin-bottom: 20px; object-fit: contain; }
-    input { width: 100%; padding: 15px; border: 2px solid #eee; border-radius: 12px; margin-bottom: 15px; box-sizing: border-box; font-size: 1em; }
-    .btn { background: var(--primary); color: white; border: none; padding: 18px; border-radius: 12px; width: 100%; font-weight: bold; cursor: pointer; font-size: 1em; }
-    .link { color: var(--primary); text-decoration: none; display: block; margin-top: 20px; font-weight: bold; font-size: 0.9em; }
+    input { 
+      width: 100%; padding: 15px; border: none; border-radius: 12px; 
+      margin-bottom: 15px; box-sizing: border-box; font-size: 1em; 
+      background: white;
+    }
+    .btn { 
+      background: white; color: #d40000; border: none; padding: 18px; 
+      border-radius: 12px; width: 100%; font-weight: bold; cursor: pointer; font-size: 1em; 
+    }
+    .link { color: white; text-decoration: none; display: block; margin-top: 20px; font-weight: bold; font-size: 0.9em; }
   </style>
 </head>
 <body>
@@ -47,7 +74,7 @@
 
   <div class="login-card">
     <img src="logo-white.png" class="logo-login" alt="Logo">
-    <h2 id="txt-login-title" style="color:var(--primary); margin-top:0;">Entrar</h2>
+    <h2 id="txt-login-title" style="color:white; margin-top:0;">Entrar</h2>
     <input type="email" id="email" placeholder="E-mail">
     <input type="password" id="password" placeholder="Senha">
     <button class="btn" id="btnLogin">ENTRAR</button>
