Fix HTML encoding issues in settings.html

--- a/settings.html
+++ b/settings.html
@@ -53,7 +53,7 @@
       <button class="btn-outline" id="btnResetTour">REINICIAR TUTORIAL</button>
     </div>
 
-    <button class="btn-outline" style="border-color:#999; color:#999;" onclick="location.replace('login.html')">SAIR DA CONTA</button>
+    <button class="btn-outline" style="border-color:#999; color:#999;" onclick="location.replace('index.html')">SAIR DA CONTA</button>
   </main>
 
   <script>
@@ -98,4 +98,5 @@
     window.onload = aplicarConfiguracoes;
   </script>
 </body>
+
 </html>
